fix: chatMessageId cursor 부등호 변경